; The site example — ONE shared public/ + a single isomorphic frontend/ tree
; (apps, components, templates), assembled into ONE web root.
;
;   frontend/  -> native SSR lib (frontend/dune) + melange CSR mirror (client/) + emit/
;   fennec assemble: per app, esbuild emit/out/.../apps/<name>/main.js -> _apps/<name>/main.js
;                    and sass apps/<name>/main.scss -> _apps/<name>/main.css; build the
;                    shared /react.js (preact) runtime; merge public/ -> webroot/.
;   prod: one embed module bakes the assembled web root into the binary.

; ---- shared preact runtime entry (resolve preact against this dir's node_modules)
(rule
 (target preact_entry.mjs)
 (action
  (copy %{workspace_root}/fennec/ui/runtime/preact_entry.mjs preact_entry.mjs)))

; ---- assemble the single web root: per-app JS+CSS bundles, shared runtime, public/
(rule
 (targets
  (dir webroot))
 (deps
  (alias emit/melange)
  (glob_files_rec emit/out/*)
  (source_tree frontend)
  (source_tree public)
  preact_entry.mjs
  (glob_files_rec node_modules/preact/*)
  %{workspace_root}/fennec/ui/runtime/require_shim.js)
 (action
  (run %{bin:fennec} assemble
   --emit emit/out
   --frontend frontend
   --public public
   --runtime preact_entry.mjs
   --shim %{workspace_root}/fennec/ui/runtime/require_shim.js
   -o webroot)))

; ---- prod embed module (release: bake the web root in; dev: empty stub) ----
(rule
 (target assets.ml)
 (enabled_if (= %{profile} release))
 (deps webroot)
 (action
  (run %{bin:fennec} assemble --embed assets.ml -o webroot)))

(rule
 (target assets.ml)
 (enabled_if (<> %{profile} release))
 (action
  (with-stdout-to assets.ml
   (echo "let lookup (_ : string) : string option = None\n"))))

; ensure the web root is built by a plain `dune build`
(alias
 (name all)
 (deps webroot))

(alias
 (name default)
 (deps webroot))

(executable
 (name server)
 (modules server assets)
 (libraries fennec fennec.router fennec-examples.frontend))
