; Client (CSR) runtime for <Head>, compiled by Melange. Same Head.make signature
; as the native fennec.ssr runtime, so one shared <Head> compiles to both
; targets. Applies the merged head to the live document via useLayoutEffect.
(library
 (name fennec_csr)
 (public_name fennec.csr)
 (modes melange)
 (libraries fennec.head reason-react melange.js)
 (preprocess
  (pps melange.ppx reason-react-ppx)))
