; The DDP protocol layer: a pure JSON value+parser, the EJSON wire codec, the DDP message
; model+codec, the transport-agnostic server session, and the SockJS framing shim. No Yojson /
; Js.Json — pure OCaml string processing over fennec-mongo's Bson — so the whole protocol compiles
; identically to native (server) AND JavaScript (browser). The session takes publications/methods
; as caller-supplied closures, so it stays pure and depends on nothing but Bson. See DATAFLOW.md §6.

(library
 (name fennec_ddp)
 (public_name fennec.ddp)
 (libraries fennec-mongo.bson))
