; fennec.e2e — a self-contained real-browser e2e driver: a hand-written WebSocket +
; Chrome DevTools Protocol client on Eio, a leak-proof browser/process lifecycle, a
; bounded worker pool, and a pipe-shaped page DSL. Depends only on Eio + yojson + base64
; (the WebSocket handshake key) — no npm, no Lwt, no chromedriver, no Selenium. The only
; runtime requirement is a Chromium-family browser installed on the host.
;
; The orchestration (pool, runner, DSL, matchers) is written against an abstract page
; BACKEND, so all of it is unit-tested against an in-memory fake; only the thin Cdp
; backend touches a real browser (integration-tested by the dogfood suite).
(library
 (name fennec_e2e)
 (public_name fennec.e2e)
 (libraries eio eio.unix eio_main unix yojson base64)
 (modes byte native))
