; fennec-hunt — the testing package. The fennec hunts for bugs. Two layers:
;
;   Http tests: typed HTTP client + server lifecycle + pipe-shaped assertions.
;               For "does my API return 401?" and "does the dev server survive SIGKILL?"
;
;   Browser tests: a real Chrome over CDP — hand-written WebSocket + DevTools Protocol,
;                  a pipe-shaped page DSL, auto-waiting conditions, rich failure diagnostics.
;                  For "does the counter hydrate?" and "does livereload work visually?"
;
; One package, layered. Import what you need. The Browser layer reuses the Http layer's
; server lifecycle. Its OWN opam package (fennec-hunt) — production servers never link it.
;
; The Browser orchestration is written against an abstract page BACKEND, so the DSL/runner
; are unit-tested against an in-memory fake; only the thin Cdp backend touches a real browser.
(library
 (name fennec_hunt)
 (public_name fennec-hunt)
 (libraries eio eio.unix eio_main unix yojson base64)
 (private_modules cdp cdp_backend chrome conformance fennec_hunt_util)
 (modes byte native))

; the package landing page for odoc (`dune build @doc`)
(documentation
 (package fennec-hunt)
 (mld_files index))
