; PWA support, framework-owned: the manifest + service worker are GENERATED (the framework owns the
; asset graph, so the precache list and cache version are exact — no Workbox, no userland SW file),
; served by one paw, and registered by one head snippet. Generation is pure string templating —
; fully unit-testable natively, no browser involved. Multiple PWAs per origin work via manifest
; scopes (one app subpath each); multitenant-by-host is separate origins. Unwrapped: userland says
; `Pwa.v` / `Pwa.paw` / `Pwa.head_html` (the Method/Codec/Ddp_client precedent).

(library
 (name fennec_pwa)
 (public_name fennec.pwa)
 (wrapped false)
 (libraries fennec.core fennec.paw))
