; The native I/O shell: a compact HTTP/1.1 + WebSocket server over Eio (no
; cohttp, no Lwt). Ws is the RFC 6455 framing (digestif + base64 for the
; handshake). Gzip is real zlib for Content-Encoding + permessage-deflate.
; Responder applies airtight HTTP semantics; Static serves the public/ tree.
(library
 (name fennec_server)
 (public_name fennec.server)
 (libraries fennec.core eio eio.unix digestif base64 zlib bigstringaf))
