; The native I/O shell: a compact HTTP/1.1 + WebSocket server over Eio (no
; cohttp, no Lwt). Ws is the RFC 6455 framing (digestif + base64 for the
; handshake). Gzip is real zlib for Content-Encoding + permessage-deflate.
; Responder applies airtight HTTP semantics; Static serves the public/ tree.

(library
 (name fennec_server)
 (public_name fennec.server)
 ; tls-eio + tls + x509 + the RNG: in-process HTTPS termination (Server.run ?tls). digestif/base64
 ; for the WS handshake; zlib for gzip/permessage-deflate.
 (libraries
  fennec.core
  fennec.paw
  fennec-mongo.bson
  fennec-mongo.bson_json
  fennec-mongo.minimongo
  fennec-mongo.driver
  eio
  eio.unix
  eio_main
  unix
  digestif
  base64
  zlib
  bigstringaf
  tls
  tls-eio
  x509
  ca-certs
  domain-name
  zarith
  ptime
  mirage-crypto-rng.unix
  fennec-mongo.json
  fennec-hunt.unit
  fennec-hunt.prop)
 (inline_tests
  (backend fennec-hunt.runner))
 (preprocess
  (pps fennec-hunt.ppx)))
